# mp_diaphragmEMG

./: .python-version  LICENSE  Python-Guide.md  README.md  pyproject.toml
mpEMG_MATLAB/: filters.m  gstats.m  linear_envelope_methods.m
mpEMG_py/: HowTo.md  README.md  pyproject.toml
mpEMG_py/mp_diaphragmEMG/: filters.py  linear_envelope_methods.py
mpEMG_py/mp_emgdiaphragm/: gstats.py  linear_envelope_methods.py  mpstyle.py
mpEMG_py/mp_figures_generator/: bilateral_breathing-full-recording.py  bilateral_breathing_behaviors.py  bilateral_breathing_behaviors_envelope.py  envelop_comparison.py  envelop_comparison_long.py  eupnic_breathing_awake.py  ffc-filter_example.py  multi-week.py
mp_diaphragmEMG/: filters.py
mp_figures_generator/: bilateral_breathing_behaviors.py  breathing_behaviors.py  envelop_comparison.py  eupnic_breathing_anesthetized.py
src/mp_emgdiaphragm/: __init__.py  filters.py  linear_envelope_methods.py
test/: onset-offset.py
