[tool.poetry]
name = "mp-diaphragmemg"
version = "0.1.0"
description = "Code to replicate figures for the methods paper on fine-wire diaphragm emg"
authors = [
    "Jesús Peñaloza <jesus.penalozaa@ufl.edu>",
    "Taylor Holmes <taylor.holmes@marquette.edu>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <3.10"
ipykernel = "^6.29.0"
ipympl = "^0.9.4"
pyarrow = "^14.0.2"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
mpl-interactions = { extras = ["jupyter"], version = "^0.24.1" }
neo = "^0.12.0"
scipy = "^1.11.4"
scikit-learn = "^1.5.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
python-lsp-ruff = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
