[project]
name = "mp_emgdiaphragm"
version = "0.1.0"
description = "Code to replicate figures for the methods paper on fine-wire diaphragm emg"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Jesús Peñaloza", email = "jesus.penalozaa@ufl.edu" },
    { name = "Taylor Holmes", email = "taylor.holmes@marquette.edu" }
]
requires-python = " >=3.9, <3.10"
dependencies = [
    "ipympl",
    "matplotlib",
    "mpl-interactions[jupyter]",
    "neo",
    "numpy",
    "pyarrow",
    "ruptures",
    "scikit-learn",
    "scipy",
    "sonpy",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel",
    "ruff",
]
