[tool.poetry]
name = "mp_emgdiaphragm"
version = "0.1.0"
description = "Code to replicate figures for the methods paper on fine-wire diaphragm emg"
authors = [
    "Jesús Peñaloza <jesus.penalozaa@ufl.edu>",
    "Taylor Holmes <taylor.holmes@marquette.edu>",
]
license = "MIT"
readme = "README.md"
packages = [{ include = "mp-emgdiaphragm" }]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.29"
ipympl = "^0.9.4"
pyarrow = "^14.0"
numpy = "^1.26"
matplotlib = "^3.8"
mpl-interactions = { extras = ["jupyter"], version = "^0.24" }
neo = "^0.12"
scipy = "^1.11"
scikit-learn = "^1.5"

[tool.poetry.group.dev.dependencies]
black = "^23.12"
python-lsp-ruff = "^2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
